# TRIC

./: README.md  all_plot0.py  cart.txt  crime.html  files.html  index.html  info.md  map.html  map1.html  map2.html  map5.html  requirements.txt  script.js  style.css
all_plot/: 2_plot.py  all_plot.py
arduino_read_pc/: arduino_read_pc.py
arduino_script/: arduino_script.ino
arduino_script.ino/: arduino_script.ino.ino
arduino_testing/: arduino_testing.ino
data/: data.txt  noboomrun2boomrun2.html
docs/: all_plot.md  arduino_read_pc.md  arduino_script.md  emlid_plot.md  emlid_read_pc.md  file_plot.md  generate_data.md  get_all.md  telemetre.md  ultrasonic sensor.md
emlid_arduino/: emlid_arduino.ino
emlid_plot/: emlid_plot.py
emlid_read_pc/: emlid_read_pc.py
file_plot/: file_lot.py  file_plot.py
final/: noboomrun2boomrun2.html
generate_data/: generate_data.py
get_all/: get_all.py
gps/: gps.ino
graph_examples/: graph.html
map_examples/: map1.html  map2.html  map3.html  map4.html  map5.html  map6.html  map7.html
telemetre/: telemetre.ino
telemetre_stream/: telemetre_stream.ino
test/: test.py
v1/: README.md  all_plot0.py  cart.txt  (+4 more)
v2/realsense/cpp/: CMakeLists.txt  main copy.cpp  main.cpp  notepad.txt  test.cpp
v2/realsense/cpp/demo/: 2d_scatter_plot.html  3d_scatter_plot.html  gps_data.txt  performance_data.txt  processed_data.txt
v2/realsense/cpp/dump/data_20240715_155112/: gps_data.txt  performance_data.txt
v2/realsense/cpp/dump/data_20240715_155635/: gps_data.txt  performance_data.txt  processed_data.txt
v2/realsense/cpp/dump/data_20240715_161915/: gps_data.txt  performance_data.txt  processed_data.txt
(+277 files in other folders)
